# Fraud-Detection

./: .gitignore  PROJECT_STRUCTURE.md  README.md  config.py  eda.ipynb  pyproject.toml  requirements.txt
A_tuning/: features_selection.ipynb  person_features_selection.ipynb  person_tuning.ipynb  waiter_week_tuning.ipynb
charts/: ensemble_analysis.ipynb
config/: config.yaml
config/input/: default.yaml
config/model/: all.yaml  isolation_forest.yaml  lof.yaml  one_class_svm.yaml
models/: fit_and_evaluate.py  local_outlier_factor.ipynb  models.py  models_tuning.ipynb  one_class_svm.ipynb  scaling.py  synt_data_generation.py  waiter_ensemble.py  waiter_models.ipynb  waiter_models.py  waiter_month_models.py  waiter_week_models.py
models_tuning/: waiter_month_feature_selection.ipynb  waiter_month_tunung.ipynb
notebooks/: explore_results.ipynb
parquet/: client_level_features.ipynb  data_cleaning.ipynb  fraud_ids.py  waiter_level_features.ipynb  waiter_month_level_features.ipynb  waiter_week_level_features.ipynb
scripts/: train.py
src/waiter_detection/: __init__.py  detector.py  features.py  graph.py  pipeline.py
